# Gesture_testing

./: .gitignore  dataset_analysis.ipynb  example.py  main.py  media_pipe_example.py  preprocess_videos.py  preprocess_videos.sh  pyproject.toml  stgcn.py  utils.py
data/: filtered_dataset.csv  gloss_map.csv
src/data_preprocessing/: helpers.py  video_preprocessor.py
